--- a/index.css
+++ b/index.css
@@ -26,7 +26,10 @@ body {
 .sidebar-container {
     position: fixed;
     width: 320px;
-    height: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     box-shadow: 16px 0 52px 0 rgb(223, 219, 219);
 }
 
@@ -76,8 +79,8 @@ body {
 
 .navigation-menu {
     width: 100%;
-    padding-bottom: 200px;
     box-sizing: border-box;
+    padding-bottom: 24px;
 }
 
 .menu-list__item {
@@ -136,7 +139,7 @@ body {
 
 .contact-buttons--profile-image {
     background-image: url("images/profile.png");
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
 }
 
 .contact-buttons__item:hover {
