final changes in styles

--- a/index.css
+++ b/index.css
@@ -75,6 +75,7 @@ body {
     transform: scale(1.1); 
     transition-duration: 100ms;
     transition-timing-function: ease-in;
+    filter: opacity(80%);
 }
 
 .navigation-menu {
@@ -100,15 +101,14 @@ body {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+.menu-list__item:hover::before,
+.menu-list__item:active::before {
+    background-color: #41f6d7;
+}
 
 .menu-list__link:active,
 .menu-list__link:hover {
-    filter: opacity(60%);
-}
-
-.menu-list__item:active::before,
-.menu-list__item:hover::before  {
-    background-color: #41F6D7;
+    color: #7E7E82;
 }
 
 .contact-buttons {
@@ -142,10 +142,12 @@ body {
     background-repeat: no-repeat;
 }
 
-.contact-buttons__item:hover {
+.contact-buttons__item:hover,
+.contact-buttons__item:active {
     transform: scale(1.1) rotate(360deg); 
     transition-duration: 500ms;
     transition-timing-function: ease-in;
+    filter: opacity(80%);
 }
 
 .contact-info {
@@ -179,9 +181,6 @@ body {
 .lang-navigation__item:active,
 .lang-navigation__item:hover {
     filter: opacity(60%);
-}
-
-.lang-navigation__item:hover {
     transform: scale(1.2);
     transition: 300ms;
 }
